--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=Y-5-eiM-HzHb7G2tI83C9ZJZlulMyYpZ
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
