--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pg": "^8.12.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
     "source-map-support": "^0.5.21"
   }
 }
